# nano-hairstyle

./: .env.example  .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt  streamlit_app.py
experimentation/: nano.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: deploy_cloud_run.py
